# WolvCTF-2024-Challenges-Public

./: README.md
OSINT/wolphv1/: README.md
OSINT/wolphv1/solution/: solve.md
OSINT/wolphv2/: README.md
OSINT/wolphv2/solution/: solve.md
OSINT/wolphv3/: README.md
OSINT/wolphv3/solution/: solve.md
OSINT/wolphv4/: README.md
OSINT/wolphv4/dev-script/: script.sh
OSINT/wolphv5/: README.md
crypto/blocked1/: README.md
crypto/blocked2/: README.md
crypto/limited1/: README.md
crypto/limited2/: README.md
forens/log-analysis/: README.md
forens/site-secret/: README.md
misc/UnholyFile/: README.md  copy-to-zeal.sh  flag.txt
misc/befuddled1/: README.md
misc/befuddled2/: README.md
misc/befuddled3/: README.md
misc/make1_madesense/: README.md  build-and-deploy-to-gcloud.sh  docker-compose.yml  flag.txt  index.html  solve.py  solve.txt
misc/make2_madefunctional/: Dockerfile  README.md  build-and-deploy-to-gcloud.sh  docker-compose.yml  flag.txt  index.html  solve.py  solve.txt
misc/make3_madeharder/: app.py  build-and-deploy-to-gcloud.sh  description.md  docker-compose.yml  flag.txt  index.html  solve.py  solve.txt
misc/make4_madewithlove/: app.py  build-and-deploy-to-gcloud.sh  description.md  docker-compose.yml  flag.txt  index.html  solve.py  solve.txt
pwn/: README.md
pwn/CScript/: Dockerfile  README.md  challenge.yaml  spec.md
pwn/DeepString/: README.md  challenge.yaml
pwn/byteOverflow.com/: README.md  challenge.yaml
pwn/shelleater/: Dockerfile  README.md  challenge.yaml  solve.py
rev/UnholyEXE/: BST.HH  README.md  Sockets.HH  chal.PRJ  chal.ZC  copy-to-zeal.sh  flag.txt
rev/assembled/: README.md
rev/befudgedup/: README.md
rev/collateral_damage/: README.md
rev/doubledeletes_revenge/: README.md
rev/graphics/: README.md
rev/graphics/challenge/: CMakeLists.txt  build.bat  config.bat  flag.ma  flag.txt
rev/graphics/challenge/objects/: flag.fbx
rev/graphics/challenge/src/: flag.h  main.cpp
rev/graphics/challenge/ui/: ui.rml
rev/maize/: README.md
rev/missing-resources/: README.md
rev/palworld/: README.md
rev/sfinae/: README.md
web/: solve-all-web-hosted-chals.sh
web/bean-cafe/: README.md
web/order-up/: README.md
web/upload-fun/: README.md
(+146 files in other folders)
